manual/v3.7.1/ja/html/_sources/filespecification/outputfiles_ja/cisajs_ja.rst.txt
.. highlight:: none

.. _Subsec:cgcisajs:

cisajs.dat
~~~~~~~~~~

OneBodyGで指定された一体グリーン関数\ :math:`\langle c_{i\sigma_1}^{\dagger}c_{j\sigma_2}\rangle`\ の計算結果を出力します。以下にファイル例を記載します。

::

        0    0    0    0 0.4452776740 0.0000000000
        0    1    0    1 0.4452776740 0.0000000000
        1    0    1    0 0.5000000000 0.0000000000
        1    1    1    1 0.5000000000 0.0000000000
        2    0    2    0 0.4452776740 0.0000000000
        2    1    2    1 0.4452776740 0.0000000000
        3    0    3    0 0.5000000000 0.0000000000
        3    1    3    1 0.5000000000 0.0000000000
        …

ファイル名
^^^^^^^^^^

Lanczos法: ##\_cisajs.dat

TPQ法: ##\_cisajs\_set??step%%.dat

``OutputGreenFormat=1`` のTPQ/cTPQ法: ##\_cisajs\_tpq.dat

実時間発展法: ##\_cisajs\_step%%.dat

``OutputGreenFormat=1`` の実時間発展法: ##\_cisajs\_te.dat

全対角化法、LOBCG法: ##\_cisajs\_eigen&&.dat

``OutputGreenFormat=1`` の全対角化法、LOBCG法: ##\_cisajs\_eigen.dat

##はModParaファイル内の[string02]で指定されるヘッダ、??はTPQ法計算時のrunの番号、%%はTPQ法でのステップ数、&&は固有値の番号を表します。集約形式では、各行の先頭にTPQ/cTPQでは ``set step``、実時間発展では ``step``、全対角化/LOBCGでは ``eigen`` が追加されます。

ファイル形式
^^^^^^^^^^^^

-  :math:`[`\ int01\ :math:`]`  :math:`[`\ int02\ :math:`]`  :math:`[`\ int03\ :math:`]`  :math:`[`\ int04\ :math:`]`  :math:`[`\ double01\ :math:`]`  :math:`[`\ double02\ :math:`]`

``OutputGreenFormat=1`` の集約ファイルでは、上記の列の前に計算手法に応じた ``set step``、``step``、または ``eigen`` のindex列が追加されます。

パラメータ
^^^^^^^^^^

-  :math:`[`\ int01\ :math:`]`, :math:`[`\ int03\ :math:`]`

   **形式 :** int型

   **説明 :**
   サイト番号を指定する整数。\ :math:`[`\ int01\ :math:`]`\ が\ :math:`i`\ サイト、\ :math:`[`\ int03\ :math:`]`\ が\ :math:`j`\ サイトを表します。

-  :math:`[`\ int02\ :math:`]`, :math:`[`\ int04\ :math:`]`

   **形式 :** int型

   | **説明 :**
     スピンを指定する整数。\ :math:`[`\ int02\ :math:`]`\ が\ :math:`\sigma_1`\ 、\ :math:`[`\ int04\ :math:`]`\ が\ :math:`\sigma_2`\ に対応します。
   | 電子系・近藤格子系では
   | 0: アップスピン
   | 1: ダウンスピン
   | を表します。
   | SpinlessFermion/SpinlessFermionGC では 0 のみ出力されます。

-  :math:`[`\ double01\ :math:`]`, :math:`[`\ double02\ :math:`]`

   **形式 :** double型

   | **説明 :**
     :math:`\langle c_{i\sigma_1}^{\dagger}c_{j\sigma_2}\rangle`\ の値を表します。
   | :math:`[`\ double01\ :math:`]`\ が実部、\ :math:`[`\ double02\ :math:`]`\ が虚部を表します。

.. raw:: latex

   \newpage
